--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -2605,7 +2605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 118,
    "metadata": {
     "collapsed": false
    },
@@ -2618,38 +2618,14 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>MonthsWithImpressions</th>\n",
        "      <th>Impressions</th>\n",
-       "      <th>ImpressionAssistedConversions</th>\n",
-       "      <th>Clicks</th>\n",
-       "      <th>ClickAssistedConversions</th>\n",
-       "      <th>CTR</th>\n",
-       "      <th>QualityScore</th>\n",
        "      <th>CostEUR</th>\n",
-       "      <th>AllConversions</th>\n",
-       "      <th>Conversions</th>\n",
-       "      <th>CostPerAllConversion</th>\n",
-       "      <th>CostPerConversion</th>\n",
-       "      <th>BounceRate</th>\n",
-       "      <th>AveragePosition</th>\n",
-       "      <th>AveragePageviews</th>\n",
-       "      <th>AverageTimeOnSite</th>\n",
-       "      <th>PercentNewVisitors</th>\n",
+       "      <th>Criteria</th>\n",
+       "      <th>ClickAssistedConversions</th>\n",
+       "      <th>Clicks</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ClickAssistedConversions</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -2660,91 +2636,37 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>False</th>\n",
-       "      <td>283866</td>\n",
        "      <td>3.751079e+06</td>\n",
-       "      <td>6840.916667</td>\n",
-       "      <td>469581.166667</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>37086.212890</td>\n",
-       "      <td>1.443904e+06</td>\n",
        "      <td>178732.032500</td>\n",
-       "      <td>3133.500000</td>\n",
-       "      <td>2813.916667</td>\n",
-       "      <td>44324.859038</td>\n",
-       "      <td>44742.529645</td>\n",
-       "      <td>14428.443966</td>\n",
-       "      <td>416725.054397</td>\n",
-       "      <td>344060.533476</td>\n",
-       "      <td>1.368016e+07</td>\n",
-       "      <td>32610.826693</td>\n",
+       "      <td>165030</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>469581.166667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>True</th>\n",
-       "      <td>8133</td>\n",
        "      <td>9.507356e+05</td>\n",
-       "      <td>2802.666667</td>\n",
-       "      <td>134708.416667</td>\n",
-       "      <td>1067.433333</td>\n",
-       "      <td>545.632793</td>\n",
-       "      <td>2.031233e+04</td>\n",
        "      <td>50452.889167</td>\n",
-       "      <td>2260.333333</td>\n",
-       "      <td>2181.500000</td>\n",
-       "      <td>34009.012378</td>\n",
-       "      <td>34574.261291</td>\n",
-       "      <td>286.427404</td>\n",
-       "      <td>4424.161011</td>\n",
-       "      <td>8662.164236</td>\n",
-       "      <td>3.858258e+05</td>\n",
-       "      <td>661.227020</td>\n",
+       "      <td>2192</td>\n",
+       "      <td>1067.433333</td>\n",
+       "      <td>134708.416667</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                          MonthsWithImpressions   Impressions  \\\n",
-       "ClickAssistedConversions                                        \n",
-       "False                                    283866  3.751079e+06   \n",
-       "True                                       8133  9.507356e+05   \n",
+       "                           Impressions        CostEUR  Criteria  \\\n",
+       "ClickAssistedConversions                                          \n",
+       "False                     3.751079e+06  178732.032500    165030   \n",
+       "True                      9.507356e+05   50452.889167      2192   \n",
        "\n",
-       "                          ImpressionAssistedConversions         Clicks  \\\n",
-       "ClickAssistedConversions                                                 \n",
-       "False                                       6840.916667  469581.166667   \n",
-       "True                                        2802.666667  134708.416667   \n",
-       "\n",
-       "                          ClickAssistedConversions           CTR  \\\n",
+       "                          ClickAssistedConversions         Clicks  \n",
        "ClickAssistedConversions                                           \n",
-       "False                                     0.000000  37086.212890   \n",
-       "True                                   1067.433333    545.632793   \n",
-       "\n",
-       "                          QualityScore        CostEUR  AllConversions  \\\n",
-       "ClickAssistedConversions                                                \n",
-       "False                     1.443904e+06  178732.032500     3133.500000   \n",
-       "True                      2.031233e+04   50452.889167     2260.333333   \n",
-       "\n",
-       "                          Conversions  CostPerAllConversion  \\\n",
-       "ClickAssistedConversions                                      \n",
-       "False                     2813.916667          44324.859038   \n",
-       "True                      2181.500000          34009.012378   \n",
-       "\n",
-       "                          CostPerConversion    BounceRate  AveragePosition  \\\n",
-       "ClickAssistedConversions                                                     \n",
-       "False                          44742.529645  14428.443966    416725.054397   \n",
-       "True                           34574.261291    286.427404      4424.161011   \n",
-       "\n",
-       "                          AveragePageviews  AverageTimeOnSite  \\\n",
-       "ClickAssistedConversions                                        \n",
-       "False                        344060.533476       1.368016e+07   \n",
-       "True                           8662.164236       3.858258e+05   \n",
-       "\n",
-       "                          PercentNewVisitors  \n",
-       "ClickAssistedConversions                      \n",
-       "False                           32610.826693  \n",
-       "True                              661.227020  "
+       "False                                     0.000000  469581.166667  \n",
+       "True                                   1067.433333  134708.416667  "
       ]
      },
-     "execution_count": 116,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2752,7 +2674,11 @@
    "source": [
     "df[df['Group'] == 'Other'].groupby(by=(df[df['Group'] == 'Other']['ClickAssistedConversions']>0))[['ClickAssistedConversions','CostEUR',\n",
     "                                           'Impressions','Clicks',\n",
-    "                                           'Criteria']]"
+    "                                           'Criteria']].aggregate({'ClickAssistedConversions':sum,\n",
+    "                                                                   'CostEUR':sum,\n",
+    "                                                                   'Impressions':sum,\n",
+    "                                                                   'Clicks':sum,\n",
+    "                                                                   'Criteria':'count'})"
    ]
   },
   {
