--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -2719,6 +2719,84 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Impressions</th>\n",
+       "      <th>CostEUR</th>\n",
+       "      <th>Criteria</th>\n",
+       "      <th>ClickAssistedConversions</th>\n",
+       "      <th>Clicks</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ClickAssistedConversions</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>False</th>\n",
+       "      <td>3.786784e+06</td>\n",
+       "      <td>180693.0675</td>\n",
+       "      <td>165092</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>4.748968e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>True</th>\n",
+       "      <td>5.483955e+06</td>\n",
+       "      <td>305698.3900</td>\n",
+       "      <td>2727</td>\n",
+       "      <td>14631.983333</td>\n",
+       "      <td>1.054610e+06</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           Impressions      CostEUR  Criteria  \\\n",
+       "ClickAssistedConversions                                        \n",
+       "False                     3.786784e+06  180693.0675    165092   \n",
+       "True                      5.483955e+06  305698.3900      2727   \n",
+       "\n",
+       "                          ClickAssistedConversions        Clicks  \n",
+       "ClickAssistedConversions                                          \n",
+       "False                                     0.000000  4.748968e+05  \n",
+       "True                                  14631.983333  1.054610e+06  "
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby(by=(df['ClickAssistedConversions']>0))[['ClickAssistedConversions','CostEUR',\n",
+    "                                           'Impressions','Clicks',\n",
+    "                                           'Criteria']].aggregate({'ClickAssistedConversions':sum,\n",
+    "                                                                   'CostEUR':sum,\n",
+    "                                                                   'Impressions':sum,\n",
+    "                                                                   'Clicks':sum,\n",
+    "                                                                   'Criteria':'count'})"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
