--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -2379,7 +2379,8 @@
     }
    ],
    "source": [
-    "df.groupby(by=(df['AllConversions'] > 0))[['AllConversions','CostEUR',\n",
+    "df.groupby(by=(df['AllConversions'] > 0))[['AllConversions',''\n",
+    "                                           'CostEUR',\n",
     "                                           'Impressions','Clicks',\n",
     "                                           'Criteria']].aggregate({'AllConversions':sum,\n",
     "                                                                   'CostEUR':sum,\n",
@@ -2719,7 +2720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 130,
    "metadata": {
     "collapsed": false
    },
@@ -2732,14 +2733,16 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Impressions</th>\n",
-       "      <th>CostEUR</th>\n",
-       "      <th>Criteria</th>\n",
        "      <th>ClickAssistedConversions</th>\n",
+       "      <th>CostEUR</th>\n",
+       "      <th>AllConversions</th>\n",
+       "      <th>Criteria</th>\n",
+       "      <th>Impressions</th>\n",
        "      <th>Clicks</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ClickAssistedConversions</th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -2750,18 +2753,20 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>False</th>\n",
-       "      <td>3.786784e+06</td>\n",
-       "      <td>180693.0675</td>\n",
-       "      <td>165092</td>\n",
        "      <td>0.000000</td>\n",
+       "      <td>180693.0675</td>\n",
+       "      <td>3435.166667</td>\n",
+       "      <td>165092</td>\n",
+       "      <td>3.786784e+06</td>\n",
        "      <td>4.748968e+05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>True</th>\n",
-       "      <td>5.483955e+06</td>\n",
-       "      <td>305698.3900</td>\n",
-       "      <td>2727</td>\n",
        "      <td>14631.983333</td>\n",
+       "      <td>305698.3900</td>\n",
+       "      <td>23880.083333</td>\n",
+       "      <td>2727</td>\n",
+       "      <td>5.483955e+06</td>\n",
        "      <td>1.054610e+06</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -2769,26 +2774,27 @@
        "</div>"
       ],
       "text/plain": [
-       "                           Impressions      CostEUR  Criteria  \\\n",
-       "ClickAssistedConversions                                        \n",
-       "False                     3.786784e+06  180693.0675    165092   \n",
-       "True                      5.483955e+06  305698.3900      2727   \n",
-       "\n",
-       "                          ClickAssistedConversions        Clicks  \n",
+       "                          ClickAssistedConversions      CostEUR  \\\n",
        "ClickAssistedConversions                                          \n",
-       "False                                     0.000000  4.748968e+05  \n",
-       "True                                  14631.983333  1.054610e+06  "
+       "False                                     0.000000  180693.0675   \n",
+       "True                                  14631.983333  305698.3900   \n",
+       "\n",
+       "                          AllConversions  Criteria   Impressions        Clicks  \n",
+       "ClickAssistedConversions                                                        \n",
+       "False                        3435.166667    165092  3.786784e+06  4.748968e+05  \n",
+       "True                        23880.083333      2727  5.483955e+06  1.054610e+06  "
       ]
      },
-     "execution_count": 128,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.groupby(by=(df['ClickAssistedConversions']>0))[['ClickAssistedConversions','CostEUR',\n",
-    "                                           'Impressions','Clicks',\n",
-    "                                           'Criteria']].aggregate({'ClickAssistedConversions':sum,\n",
+    "df.groupby(by=(df['ClickAssistedConversions']>0))[['ClickAssistedConversions','AllConversions',\n",
+    "                                                   'CostEUR','Impressions','Clicks',\n",
+    "                                           'Criteria']].aggregate({'AllConversions':sum,\n",
+    "                                                                   'ClickAssistedConversions':sum,\n",
     "                                                                   'CostEUR':sum,\n",
     "                                                                   'Impressions':sum,\n",
     "                                                                   'Clicks':sum,\n",
