--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -2312,7 +2312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 132,
    "metadata": {
     "collapsed": false
    },
@@ -2325,14 +2325,18 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Impressions</th>\n",
+       "      <th>ClickAssistedConversions</th>\n",
        "      <th>CostEUR</th>\n",
-       "      <th>Clicks</th>\n",
+       "      <th>ImpressionAssistedConversions</th>\n",
        "      <th>AllConversions</th>\n",
        "      <th>Criteria</th>\n",
+       "      <th>Impressions</th>\n",
+       "      <th>Clicks</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>AllConversions</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -2343,46 +2347,57 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>False</th>\n",
-       "      <td>2.707570e+06</td>\n",
+       "      <td>1.750000</td>\n",
        "      <td>128969.6125</td>\n",
-       "      <td>3.272166e+05</td>\n",
+       "      <td>4323.416667</td>\n",
        "      <td>0.00</td>\n",
        "      <td>159796</td>\n",
+       "      <td>2.707570e+06</td>\n",
+       "      <td>3.272166e+05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>True</th>\n",
-       "      <td>6.563169e+06</td>\n",
+       "      <td>14630.233333</td>\n",
        "      <td>357421.8450</td>\n",
-       "      <td>1.202290e+06</td>\n",
+       "      <td>19706.750000</td>\n",
        "      <td>27315.25</td>\n",
        "      <td>8023</td>\n",
+       "      <td>6.563169e+06</td>\n",
+       "      <td>1.202290e+06</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                 Impressions      CostEUR        Clicks  AllConversions  \\\n",
-       "AllConversions                                                            \n",
-       "False           2.707570e+06  128969.6125  3.272166e+05            0.00   \n",
-       "True            6.563169e+06  357421.8450  1.202290e+06        27315.25   \n",
+       "                ClickAssistedConversions      CostEUR  \\\n",
+       "AllConversions                                          \n",
+       "False                           1.750000  128969.6125   \n",
+       "True                        14630.233333  357421.8450   \n",
        "\n",
-       "                Criteria  \n",
-       "AllConversions            \n",
-       "False             159796  \n",
-       "True                8023  "
+       "                ImpressionAssistedConversions  AllConversions  Criteria  \\\n",
+       "AllConversions                                                            \n",
+       "False                             4323.416667            0.00    159796   \n",
+       "True                             19706.750000        27315.25      8023   \n",
+       "\n",
+       "                 Impressions        Clicks  \n",
+       "AllConversions                              \n",
+       "False           2.707570e+06  3.272166e+05  \n",
+       "True            6.563169e+06  1.202290e+06  "
       ]
      },
-     "execution_count": 73,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.groupby(by=(df['AllConversions'] > 0))[['AllConversions',''\n",
-    "                                           'CostEUR',\n",
+    "df.groupby(by=(df['AllConversions'] > 0))[['AllConversions','ClickAssistedConversions',\n",
+    "                                           'ImpressionAssistedConversions','CostEUR',\n",
     "                                           'Impressions','Clicks',\n",
     "                                           'Criteria']].aggregate({'AllConversions':sum,\n",
+    "                                                                   'ClickAssistedConversions':sum,\n",
+    "                                                                   'ImpressionAssistedConversions':sum,\n",
     "                                                                   'CostEUR':sum,\n",
     "                                                                   'Impressions':sum,\n",
     "                                                                   'Clicks':sum,\n",
