--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -2823,7 +2823,15 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "df.groupby(by='Group')[['ClickAssistedConversions','CostEUR',\n",
+    "                                           'Impressions','Clicks',\n",
+    "                                           'Criteria']].aggregate({'ClickAssistedConversions':sum,\n",
+    "                                                                   'CostEUR':sum,\n",
+    "                                                                   'Impressions':sum,\n",
+    "                                                                   'Clicks':sum,\n",
+    "                                                                   'Criteria':'count'})"
+   ]
   }
  ],
  "metadata": {
