--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -2824,13 +2824,16 @@
    },
    "outputs": [],
    "source": [
-    "df.groupby(by='Group')[['ClickAssistedConversions','CostEUR',\n",
-    "                                           'Impressions','Clicks',\n",
-    "                                           'Criteria']].aggregate({'ClickAssistedConversions':sum,\n",
-    "                                                                   'CostEUR':sum,\n",
-    "                                                                   'Impressions':sum,\n",
-    "                                                                   'Clicks':sum,\n",
-    "                                                                   'Criteria':'count'})"
+    "df.groupby(by='Group')[['AllConversions','ClickAssistedConversions',\n",
+    "                        'ImpressionAssistedConversions',\n",
+    "                        'CostEUR','Impressions','Clicks',\n",
+    "                        'Criteria']].aggregate({'ClickAssistedConversions':sum,\n",
+    "                                                'ClickAssistedConversions':sum,\n",
+    "                                                'ClickAssistedConversions':sum,\n",
+    "                                                'CostEUR':sum,\n",
+    "                                                'Impressions':sum,\n",
+    "                                                'Clicks':sum,\n",
+    "                                              'Criteria':'count'})"
    ]
   }
  ],
