--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -2818,23 +2818,106 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ClickAssistedConversions</th>\n",
+       "      <th>CostEUR</th>\n",
+       "      <th>ImpressionAssistedConversions</th>\n",
+       "      <th>AllConversions</th>\n",
+       "      <th>Criteria</th>\n",
+       "      <th>Impressions</th>\n",
+       "      <th>Clicks</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Group</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Converter</th>\n",
+       "      <td>13564.550000</td>\n",
+       "      <td>257206.535833</td>\n",
+       "      <td>14386.583333</td>\n",
+       "      <td>21921.416667</td>\n",
+       "      <td>597</td>\n",
+       "      <td>4.568925e+06</td>\n",
+       "      <td>925217.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Other</th>\n",
+       "      <td>1067.433333</td>\n",
+       "      <td>229184.921667</td>\n",
+       "      <td>9643.583333</td>\n",
+       "      <td>5393.833333</td>\n",
+       "      <td>167222</td>\n",
+       "      <td>4.701814e+06</td>\n",
+       "      <td>604289.583333</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           ClickAssistedConversions        CostEUR  \\\n",
+       "Group                                                \n",
+       "Converter              13564.550000  257206.535833   \n",
+       "Other                   1067.433333  229184.921667   \n",
+       "\n",
+       "           ImpressionAssistedConversions  AllConversions  Criteria  \\\n",
+       "Group                                                                \n",
+       "Converter                   14386.583333    21921.416667       597   \n",
+       "Other                        9643.583333     5393.833333    167222   \n",
+       "\n",
+       "            Impressions         Clicks  \n",
+       "Group                                   \n",
+       "Converter  4.568925e+06  925217.500000  \n",
+       "Other      4.701814e+06  604289.583333  "
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby(by='Group')[['AllConversions','ClickAssistedConversions',\n",
+    "                        'ImpressionAssistedConversions',\n",
+    "                        'CostEUR','Impressions','Clicks',\n",
+    "                        'Criteria']].aggregate({'AllConversions':sum,\n",
+    "                                                'ClickAssistedConversions':sum,\n",
+    "                                                'ImpressionAssistedConversions':sum,\n",
+    "                                                'CostEUR':sum,\n",
+    "                                                'Impressions':sum,\n",
+    "                                                'Clicks':sum,\n",
+    "                                                'Criteria':'count'})"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "df.groupby(by='Group')[['AllConversions','ClickAssistedConversions',\n",
-    "                        'ImpressionAssistedConversions',\n",
-    "                        'CostEUR','Impressions','Clicks',\n",
-    "                        'Criteria']].aggregate({'ClickAssistedConversions':sum,\n",
-    "                                                'ClickAssistedConversions':sum,\n",
-    "                                                'ClickAssistedConversions':sum,\n",
-    "                                                'CostEUR':sum,\n",
-    "                                                'Impressions':sum,\n",
-    "                                                'Clicks':sum,\n",
-    "                                              'Criteria':'count'})"
-   ]
+   "source": []
   }
  ],
  "metadata": {
