--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -2618,7 +2618,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us move away from \"LastClick\" by considering ClickAssistedConversions"
+    "Can we move away from LastClick?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "df.groupby(by='SubGroup')[['AllConversions','ClickAssistedConversions',\n",
+    "                        'ImpressionAssistedConversions',\n",
+    "                        'CostEUR','Impressions','Clicks',\n",
+    "                        'Criteria']].aggregate({'AllConversions':sum,\n",
+    "                                                'ClickAssistedConversions':sum,\n",
+    "                                                'ImpressionAssistedConversions':sum,\n",
+    "                                                'CostEUR':sum,\n",
+    "                                                'Impressions':sum,\n",
+    "                                                'Clicks':sum,\n",
+    "                                                'Criteria':'count'})"
    ]
   },
   {
@@ -2820,7 +2840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 139,
    "metadata": {
     "collapsed": false
    },
@@ -2842,7 +2862,7 @@
        "      <th>Clicks</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Group</th>\n",
+       "      <th>SubGroup</th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -2854,53 +2874,92 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Converter</th>\n",
-       "      <td>13564.550000</td>\n",
-       "      <td>257206.535833</td>\n",
-       "      <td>14386.583333</td>\n",
-       "      <td>21921.416667</td>\n",
-       "      <td>597</td>\n",
-       "      <td>4.568925e+06</td>\n",
-       "      <td>925217.500000</td>\n",
+       "      <th>Converter - High</th>\n",
+       "      <td>10768.850000</td>\n",
+       "      <td>123228.950000</td>\n",
+       "      <td>7389.750000</td>\n",
+       "      <td>16266.083333</td>\n",
+       "      <td>17</td>\n",
+       "      <td>2.391588e+06</td>\n",
+       "      <td>627049.833333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Converter - Low</th>\n",
+       "      <td>869.750000</td>\n",
+       "      <td>68204.411667</td>\n",
+       "      <td>3515.750000</td>\n",
+       "      <td>3206.000000</td>\n",
+       "      <td>826</td>\n",
+       "      <td>1.112613e+06</td>\n",
+       "      <td>160315.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Converter - Mid</th>\n",
+       "      <td>2163.416667</td>\n",
+       "      <td>85393.607500</td>\n",
+       "      <td>4462.833333</td>\n",
+       "      <td>3490.916667</td>\n",
+       "      <td>145</td>\n",
+       "      <td>1.399455e+06</td>\n",
+       "      <td>187159.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Converter - Occasional</th>\n",
+       "      <td>828.216667</td>\n",
+       "      <td>80594.875833</td>\n",
+       "      <td>4338.416667</td>\n",
+       "      <td>4352.250000</td>\n",
+       "      <td>7035</td>\n",
+       "      <td>1.659514e+06</td>\n",
+       "      <td>227766.166667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Other</th>\n",
-       "      <td>1067.433333</td>\n",
-       "      <td>229184.921667</td>\n",
-       "      <td>9643.583333</td>\n",
-       "      <td>5393.833333</td>\n",
-       "      <td>167222</td>\n",
-       "      <td>4.701814e+06</td>\n",
-       "      <td>604289.583333</td>\n",
+       "      <td>1.750000</td>\n",
+       "      <td>128969.612500</td>\n",
+       "      <td>4323.416667</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>159796</td>\n",
+       "      <td>2.707570e+06</td>\n",
+       "      <td>327216.583333</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           ClickAssistedConversions        CostEUR  \\\n",
-       "Group                                                \n",
-       "Converter              13564.550000  257206.535833   \n",
-       "Other                   1067.433333  229184.921667   \n",
+       "                        ClickAssistedConversions        CostEUR  \\\n",
+       "SubGroup                                                          \n",
+       "Converter - High                    10768.850000  123228.950000   \n",
+       "Converter - Low                       869.750000   68204.411667   \n",
+       "Converter - Mid                      2163.416667   85393.607500   \n",
+       "Converter - Occasional                828.216667   80594.875833   \n",
+       "Other                                   1.750000  128969.612500   \n",
        "\n",
-       "           ImpressionAssistedConversions  AllConversions  Criteria  \\\n",
-       "Group                                                                \n",
-       "Converter                   14386.583333    21921.416667       597   \n",
-       "Other                        9643.583333     5393.833333    167222   \n",
+       "                        ImpressionAssistedConversions  AllConversions  \\\n",
+       "SubGroup                                                                \n",
+       "Converter - High                          7389.750000    16266.083333   \n",
+       "Converter - Low                           3515.750000     3206.000000   \n",
+       "Converter - Mid                           4462.833333     3490.916667   \n",
+       "Converter - Occasional                    4338.416667     4352.250000   \n",
+       "Other                                     4323.416667        0.000000   \n",
        "\n",
-       "            Impressions         Clicks  \n",
-       "Group                                   \n",
-       "Converter  4.568925e+06  925217.500000  \n",
-       "Other      4.701814e+06  604289.583333  "
+       "                        Criteria   Impressions         Clicks  \n",
+       "SubGroup                                                       \n",
+       "Converter - High              17  2.391588e+06  627049.833333  \n",
+       "Converter - Low              826  1.112613e+06  160315.500000  \n",
+       "Converter - Mid              145  1.399455e+06  187159.000000  \n",
+       "Converter - Occasional      7035  1.659514e+06  227766.166667  \n",
+       "Other                     159796  2.707570e+06  327216.583333  "
       ]
      },
-     "execution_count": 133,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.groupby(by='Group')[['AllConversions','ClickAssistedConversions',\n",
+    "df.groupby(by='SubGroup')[['AllConversions','ClickAssistedConversions',\n",
     "                        'ImpressionAssistedConversions',\n",
     "                        'CostEUR','Impressions','Clicks',\n",
     "                        'Criteria']].aggregate({'AllConversions':sum,\n",
