--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -2623,11 +2623,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 140,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ClickAssistedConversions</th>\n",
+       "      <th>CostEUR</th>\n",
+       "      <th>ImpressionAssistedConversions</th>\n",
+       "      <th>AllConversions</th>\n",
+       "      <th>Criteria</th>\n",
+       "      <th>Impressions</th>\n",
+       "      <th>Clicks</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SubGroup</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Converter - High</th>\n",
+       "      <td>10768.850000</td>\n",
+       "      <td>123228.950000</td>\n",
+       "      <td>7389.750000</td>\n",
+       "      <td>16266.083333</td>\n",
+       "      <td>17</td>\n",
+       "      <td>2.391588e+06</td>\n",
+       "      <td>627049.833333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Converter - Low</th>\n",
+       "      <td>869.750000</td>\n",
+       "      <td>68204.411667</td>\n",
+       "      <td>3515.750000</td>\n",
+       "      <td>3206.000000</td>\n",
+       "      <td>826</td>\n",
+       "      <td>1.112613e+06</td>\n",
+       "      <td>160315.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Converter - Mid</th>\n",
+       "      <td>2163.416667</td>\n",
+       "      <td>85393.607500</td>\n",
+       "      <td>4462.833333</td>\n",
+       "      <td>3490.916667</td>\n",
+       "      <td>145</td>\n",
+       "      <td>1.399455e+06</td>\n",
+       "      <td>187159.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Converter - Occasional</th>\n",
+       "      <td>828.216667</td>\n",
+       "      <td>80594.875833</td>\n",
+       "      <td>4338.416667</td>\n",
+       "      <td>4352.250000</td>\n",
+       "      <td>7035</td>\n",
+       "      <td>1.659514e+06</td>\n",
+       "      <td>227766.166667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Other</th>\n",
+       "      <td>1.750000</td>\n",
+       "      <td>128969.612500</td>\n",
+       "      <td>4323.416667</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>159796</td>\n",
+       "      <td>2.707570e+06</td>\n",
+       "      <td>327216.583333</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        ClickAssistedConversions        CostEUR  \\\n",
+       "SubGroup                                                          \n",
+       "Converter - High                    10768.850000  123228.950000   \n",
+       "Converter - Low                       869.750000   68204.411667   \n",
+       "Converter - Mid                      2163.416667   85393.607500   \n",
+       "Converter - Occasional                828.216667   80594.875833   \n",
+       "Other                                   1.750000  128969.612500   \n",
+       "\n",
+       "                        ImpressionAssistedConversions  AllConversions  \\\n",
+       "SubGroup                                                                \n",
+       "Converter - High                          7389.750000    16266.083333   \n",
+       "Converter - Low                           3515.750000     3206.000000   \n",
+       "Converter - Mid                           4462.833333     3490.916667   \n",
+       "Converter - Occasional                    4338.416667     4352.250000   \n",
+       "Other                                     4323.416667        0.000000   \n",
+       "\n",
+       "                        Criteria   Impressions         Clicks  \n",
+       "SubGroup                                                       \n",
+       "Converter - High              17  2.391588e+06  627049.833333  \n",
+       "Converter - Low              826  1.112613e+06  160315.500000  \n",
+       "Converter - Mid              145  1.399455e+06  187159.000000  \n",
+       "Converter - Occasional      7035  1.659514e+06  227766.166667  \n",
+       "Other                     159796  2.707570e+06  327216.583333  "
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.groupby(by='SubGroup')[['AllConversions','ClickAssistedConversions',\n",
     "                        'ImpressionAssistedConversions',\n",
@@ -2710,12 +2823,14 @@
     }
    ],
    "source": [
-    "df[df['Group'] == 'Other'].groupby(by=(df[df['Group'] == 'Other']['ClickAssistedConversions']>0))[['ClickAssistedConversions','CostEUR',\n",
-    "                                           'Impressions','Clicks',\n",
-    "                                           'Criteria']].aggregate({'ClickAssistedConversions':sum,\n",
-    "                                                                   'CostEUR':sum,\n",
-    "                                                                   'Impressions':sum,\n",
-    "                                                                   'Clicks':sum,\n",
+    "df[df['Group'] == 'Other'].groupby(by=(df[df['Group'] == 'Other']['ClickAssistedConversions'] +\n",
+    "                                       df[df['Group'] == 'Other']['ImpressionAssistedConversions']>0))[\n",
+    "  ['ClickAssistedConversions','ImpressionAssistedConversions','CostEUR',\n",
+    "   'Impressions','Clicks','Criteria']].aggregate({'ClickAssistedConversions':sum,\n",
+    "                                                  'ImpressionAssistedConversions':sum,\n",
+    "                                                  'CostEUR':sum,\n",
+    "                                                  'Impressions':sum,\n",
+    "                                                  'Clicks':sum,\n",
     "                                                                   'Criteria':'count'})"
    ]
   },
